[project]
name = "face-recognition"
version = "0.1.0"
description = "Face recognition using DeepFace and OpenCV"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepface>=0.0.95",
    "tf-keras>=2.20.1",
    "torch>=2.8.0",
    "tensorflow[and-cuda]>=2.20.0",
    "ruff>=0.14.0",
    "pre-commit>=4.3.0",
]
